--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,8 @@ node_modules
 .DS_Store
 
 # PROJECT SPECIFIC
-dist
+dist/default.json
+
 .idea/compiler.xml
 .idea/copyright/
 .idea/development-boilerplate.iml
